@@ -2,6 +2,7 @@ Revision history for Perl module Net::Amazon::S3:
 
 {{$NEXT}}
 	- Fix Signature V4 when uri contains tilde (issue #119, thanks marcusclip)
+	- API->bucket now accepts optional region (issue #117)
 
 0.99 2021-12-05
 	- Client API doesn't check corrupted download anymore (using ETag == MD5)
